--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,21 +1,15 @@
 .container {
-  padding: 40px 10px;
+  padding: 40px 15px;
 }
 
 @media (min-width: 768px) {
   .container {
-    padding: 80px 24px;
+    padding: 80px 40px;
   }
 }
 
 @media (min-width: 1024px) {
   .container {
-    padding: 100px 60px;
-  }
-}
-
-@media (min-width: 1920px) {
-  .container {
-    padding: 40px 80px;
+    padding: 100px 6vw;
   }
 }
